--- a/public/login-signup.css
+++ b/public/login-signup.css
@@ -45,8 +45,8 @@ background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 18px;
     margin-bottom: 15px;
+    transition: 1s;
   }
   
   .input {
@@ -55,7 +55,10 @@ background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
     outline: 0 !important;
     box-sizing: border-box;
     padding: 12px 15px;
+    margin-top: 18px;
+    transition: 1s;
   }
+  
   
   .form-btn {
     padding: 10px 15px;
@@ -68,7 +71,10 @@ background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
     color: white;
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    margin-top: 18px;
   }
+
+  
   
   .form-btn:active {
     box-shadow: none;
@@ -76,15 +82,23 @@ background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
   
   .sign-up-label {
     margin: 0;
-    font-size: 10px;
+    font-size: 12px;
     color: #747474;
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
           "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   }
   
+  label{
+    display: block;
+    font-size: 12px;
+    color: rgba(255, 0, 0, 0.667);
+    padding: 4px 0px 0 15px;
+    transition: 0.5s
+}
+
   .sign-up-link {
     margin-left: 1px;
-    font-size: 11px;
+    font-size: 13px;
     text-decoration: underline;
     text-decoration-color: #30E3CA;
     color: #30E3CA;
@@ -92,6 +106,8 @@ background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
     font-weight: 800;
   }
   
+
+
   .buttons-container {
     width: 100%;
     display: flex;
