--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,14 +8,18 @@
     
     <link rel="stylesheet" href="login-signup.css">
     <link rel="stylesheet" href="bootstrap-social.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js"></script>
+    <script src="../validation.js"></script>
     <title>Sign Up</title>
 </head>
 
 <body>
     <div class="form-container">
         <p class="title">Hey Moviegoer !</p>
-        <form class="form" action="/signup" method="post">
-            <input type="text" class="input" placeholder="Username" name="username">
+        <form class="form" action="/signup" id="signup-form" method="post">
+            <input type="text" class="input" placeholder="Username" name="username" style="margin-top: 0;">
             <input type="email" class="input" placeholder="Email" name="email">
             <input type="password" class="input" placeholder="Password" name="password">
             <button type="submit" class="form-btn">Sign up</button>
@@ -57,6 +61,7 @@
             </a>
         </div>
     </div>
+    <script src="../script.js"></script>
 </body>
 
 </html>
