--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FilmyHub</title>
-    <link rel="stylesheet" type="text/css"  href="../style.css">
+    <link rel="stylesheet" type="text/css"  href="../css/style.css">
     <script src="https://kit.fontawesome.com/7eb91cefb3.js" crossorigin="anonymous"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
@@ -25,7 +25,7 @@
                     <li class="nav-item" id="home-btn"><a href="/" class="nav-link"><i class="fa-solid fa-house"></i></a></li>
                     <i class="fa-solid fa-xmark" class="nav-link" id="close-btn"></i>
                     <li class="nav-item"><a href="/movie" class="nav-link">Movie</a></li>
-                    <li class="nav-item"><a href="/tv-show" class="nav-link">Tv show</a></li>
+                    <li class="nav-item"><a href="/watchlist" class="nav-link">watchlist</a></li>
                     <li class="nav-item"><a href="/cast" class="nav-link">People</a></li>
 
                 </ul>
