--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="login-signup.css">
-    <link rel="stylesheet" href="bootstrap-social.css">
+    <link rel="stylesheet" href="css/login-signup.css">
+    <link rel="stylesheet" href="css/bootstrap-social.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
     <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js"></script>
-    <script src="../validation.js"></script>
+    <script src="../script/validation.js"></script>
     <title>Sign Up</title>
 </head>
 
@@ -61,7 +61,7 @@
             </a>
         </div>
     </div>
-    <script src="../script.js"></script>
+    <script src="../script/script.js"></script>
 </body>
 
 </html>
