--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -3,6 +3,7 @@
 <div class="background-image"></div>
 <section class="movie-container" style="background-image: url('https://image.tmdb.org/t/p/w500/<%= movie.backdrop_path %>');">
     <% if(locals.movie) {%>
+
     <div class="movie-details">
         
         <div class="inner-content flex " id="movie-title-box">
@@ -26,13 +27,9 @@
                     <div class="movie-icons flex">
                   <div class="user-score flex">
                     <div class="icon" style="margin: 0;"><%= movie.vote_average.toFixed(2) %></div>
-                    <p style="width: 50px;padding: 8px;margin-right: 30px;">User Score</p>
+                    <p style="padding: 8px;margin-right: 30px;">User Score</p>
                 </div>
-                
-                <li class="icon"><i class=" fa-solid fa-list"></i></li>
-                <li class="icon"><i class=" fa-solid fa-heart"></i></li>
-                <li class="icon"><i class=" fa-solid fa-bookmark"></i></li>
-                <li class="icon"><i class=" fa-solid fa-star"></i></li>
+                <li class="icon" onclick="addMovie('<%= movie.id %>')"><i class=" fa-solid fa-heart"></i></li>
             </div>
             
             <div> 
@@ -109,4 +106,5 @@
         });
     </script> -->
 
+    <script src="../script/createWhatchList.js"></script>
 <%- include("footer.ejs") %>
